# Portafolio

C++/Videjuegos_SFML/TomasVaTardeJuego/tomasVaTarde/: AdministradorDeNiveles.cpp  AdministradorDeNiveles.hpp  AdministradorDeSonido.cpp  AdministradorDeSonido.hpp  Bob.cpp  Bob.hpp  CMakeLists.txt  Hud.cpp  Hud.hpp  Motor.cpp  Motor.hpp  Particula.cpp  Particula.hpp  PersonajeJugable.cpp  PersonajeJugable.hpp  SistemaDeParticulas.cpp  SistemaDeParticulas.hpp  SoporteTextura.cpp  SoporteTextura.hpp  Tomas.cpp  Tomas.hpp  actualizar.cpp  cargar_nivel.cpp  detectar_colisiones.cpp  dibujar.cpp  main.cpp  poblar_emisores.cpp  procesar_entradas.cpp  reiniciarNivel.cpp
C++/Videjuegos_SFML/TomasVaTardeJuego/tomasVaTarde/niveles/: nivel4.txt
C++/Videjuegos_SFML/TomasVaTardeJuego/tomasVaTarde/shaders/: rippleShader.frag  vertShader.vert
C++/agenda/: agenda.cpp
Java/CAI/: CAI.java  main.java
Java/OphiuchusControlV4/: OphiuchusControl.sql  consultorio.sql
Programación competitiva/: MergeSort.h  Snail.cpp  animales.cpp  brechas.cpp  cars.cpp  combinatoria.cpp  digitos.cpp  dragones.cpp  fibo.cpp  horror_dash.py  mario.cpp  planning.cpp  research.cpp  sub_prime.cpp
Python/: manejo_espectros.py
Web/Catalogo_dispositivosMoviles/: index.html
estructura_de_datos/Huffman/: huffman.c
proyecto-mini-compilador/: Instrucciones Ejecucion.txt  analyze.c  analyze.h  archivoparacompilar.txt  bison.tab.c  bison.tab.h  bison.y  cgen.c  cgen.h  code.c  code.h  flex.l  globals.h  lex.yy.c  multiplosde3.scm  parse.c  parse.h  prueba1.tm  scan.h  symtab.c  symtab.h  util.c  util.h
(+237 files in other folders)
